we created the Junit testing package in android  and there is running In a debug branch