@@ -82,7 +82,13 @@ android {
 //            exclude 'META-INF/LICENSE.txt'
 //            exclude 'META-INF/NOTICE.txt'
 //        }
-
+    testOptions{
+        unitTests.returnDefaultValues = true
+        unitTests.includeAndroidResources true
+        unitTests.all{
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
+    }
 
     compileOptions {
         targetCompatibility 1.8
@@ -154,6 +160,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.4'
     implementation 'androidx.navigation:navigation-ui:2.3.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    testImplementation 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.9.5"
 
     //Testing
 
